[tool.poetry]
name = "resume-template"
version = "0.1.0"
description = ""
authors = ["lxRbckl <lxrbckl@gmail.com>"]
readme = "README.md"
packages = [{include = "resume_template"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.10.1"
dash-bootstrap-components = "^1.4.1"
lxrbckl = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
