[tool.poetry]
name = "resume-template"
version = "0.1.0"
description = ""
authors = ["lxRbckl <lxrbckl@gmail.com>"]
readme = "README.md"
packages = [{include = "resume_template"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.16.1"
dash-bootstrap-components = "^1.5.0"
lxrbckl = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
